--- a/src/components/SearchSection/Searchfield.css
+++ b/src/components/SearchSection/Searchfield.css
@@ -33,10 +33,11 @@ h1 {
   width: 400px;
 }
 #search {
-  padding: 10px;
+  padding: 15px;
   border: 1px solid grey;
   border-radius: 18px;
   font-size: 16px;
+  box-shadow: 10px 4px 5px lightcoral;
 }
 
 button {
