--- a/src/index.css
+++ b/src/index.css
@@ -4,3 +4,17 @@
 body {
   font-family: "Times New Roman", Times, serif;
 }
+
+* {
+  margin: 0px;
+  box-sizing: border-box;
+}
+
+h1 {
+  margin-top: 20px;
+  font-size: 48px;
+}
+
+h5 {
+  font-size: 18px;
+}
